--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #7ed957;
+    background-color: #0c7384;
     font-family: sans-serif;
     overflow: hidden;
     display: flex;
