--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 body {
-    background-color: #7ed957;
+    background-color: #0c7384;
     font-family: sans-serif;
     overflow: hidden;
     justify-content: space-between;
-}
-
-.container{
 }
 
 .box1{
